Fix 404 page Oops text being cut off
Fixes https://github.com/WordPress/wporg-parent-2021/issues/155

--- a/source/wp-content/themes/wporg-parent-2021/sass/page/_404.scss
+++ b/source/wp-content/themes/wporg-parent-2021/sass/page/_404.scss
@@ -1,18 +1,10 @@
 body.error404 {
-	--oops-font-size: 47vw; // "Magic number" ala https://css-tricks.com/fitting-text-to-a-container/
+	--oops-font-size: 42vw; // "Magic number" ala https://css-tricks.com/fitting-text-to-a-container/
 
 	background-color: var(--wp--preset--color--charcoal-2);
 
 	.site-content-container {
-
-		/*
-		 * Prevent "oops" from creating a horizontal scroll.
-		 * In some iOS versions, these rules also have to be applied to <html>, but that would bleed over to other
-		 * pages. It's better to just let there be a scroll, since it's not a commonly used page.
-		 */
-		position: relative; // needed for overflow to work
-		overflow: hidden;
-
+		position: relative;
 		z-index: 0;
 
 		@include break-small() {
@@ -108,5 +100,10 @@ body.error404 {
 				fill: currentColor;
 			}
 		}
+	}
+
+	.wp-block-wporg-global-footer {
+		background: unset;
+		z-index: 1;
 	}
 }
